# lambdadb-bench

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
configs/: lambdadb-partitioned.example.yaml  lambdadb.example.yaml  pinecone-serverless.example.yaml  qdrant-cloud.example.yaml
docs/: DESIGN.md  FILTERED_SEARCH_WORKLOAD.md  HANDOFF.md  PARTITIONING_WORKLOAD.md  SEARCH_UNDER_INGEST_DESIGN.md  SHARDED_LOAD_DESIGN.md
scenarios/: cohere-wikipedia-1m-filtered-1pct.yaml  cohere-wikipedia-1m-parallel-search-under-ingest.yaml  cohere-wikipedia-1m-partitioned.yaml  cohere-wikipedia-1m-search-under-ingest.yaml  cohere-wikipedia-1m.yaml
scripts/: run-integration-tests.sh
src/ldbbench/: __about__.py  __init__.py  cli.py  config.py  manifest.py  progress.py  report.py
src/ldbbench/adapters/: __init__.py  base.py  dryrun.py  filters.py  lambdadb.py  pinecone.py  qdrant.py  registry.py
src/ldbbench/datasets/: __init__.py  ground_truth.py  prepare.py
src/ldbbench/runner/: __init__.py  execute.py  plan.py
tests/: test_cli.py  test_config.py  test_dataset_prepare.py  test_ground_truth.py  test_lambdadb_adapter.py  test_manifest.py  test_pinecone_adapter.py  test_plan.py  test_qdrant_adapter.py  test_report.py  test_runner_execute.py
